appId: com.marginallybetterapps.musictools
---
- launchApp:
    clearState: true
- repeat:
    times: 3
    while:
      notVisible: "Start metronome"
    commands:
      - tapOn:
          text: "Metronome"
          retryTapIfNoChange: true
- assertVisible: "Tempo, 120 BPM"
- assertVisible: "4/4 time"
- assertVisible: "Quarter click rhythm"
- assertVisible: "Whole click rhythm"
- assertVisible: "Half click rhythm"
- assertVisible: "Eighth click rhythm"
- assertVisible: "Triplet click rhythm"
- assertVisible: "16th click rhythm"
- startRecording: click-rhythm-triplet
- tapOn: "Triplet click rhythm"
- assertVisible: "Triplet click rhythm"
- assertVisible: "4/4 time"
- tapOn: "Start metronome"
- assertVisible: "Stop metronome"
- extendedWaitUntil:
    visible: "Beat [1-4] of 4, pulse [1-3] of 3, 4/4"
    timeout: 10000
- repeat:
    times: 4
    commands:
      - assertVisible: "Beat [1-4] of 4, pulse [1-3] of 3, 4/4"
- tapOn: "Stop metronome"
- assertVisible: "Start metronome"
- stopRecording
