appId: com.marginallybetterapps.musictools
---
- launchApp
- repeat:
    times: 3
    while:
      notVisible: "Start metronome"
    commands:
      - tapOn:
          text: "Metronome"
          retryTapIfNoChange: true
- assertVisible: "Tempo, 120 BPM"
- assertVisible: "Beats per measure, 4"
- assertVisible: "Note type, quarter note"
- assertVisible: "Subdivision, quarter notes"
- startRecording: triplet-subdivision
- swipe:
    start: 50%, 60%
    end: 60%, 60%
    duration: 650
- assertVisible: "Subdivision, eighth-note triplets"
- assertVisible: "Note type, quarter note"
- tapOn: "Start metronome"
- assertVisible: "Stop metronome"
- extendedWaitUntil:
    visible: "Beat 1 of 4, pulse 1 of 3, 4/4"
    timeout: 10000
- extendedWaitUntil:
    visible: "Beat 1 of 4, pulse 2 of 3, 4/4"
    timeout: 10000
- extendedWaitUntil:
    visible: "Beat 1 of 4, pulse 3 of 3, 4/4"
    timeout: 10000
- tapOn: "Stop metronome"
- assertVisible: "Start metronome"
- stopRecording
